--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+<h1>Add a new Cocktail</h1>
+
+<%= render 'form', cocktail: @cocktail %>
+
+<%= link_to 'Back to cocktails list', cocktails_path %>
