--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @cocktail.name %></h1>
-<%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+<td>
+          <% if @cocktail.photo? %>
+            <%= cl_image_tag @cocktail.photo, width: 200, height: 300, crop: :fill %>
+          <% end %>
+        </td>
 <ul>
   <% @cocktail.doses.each do |dose| %>
   <li><%= dose.description %> - <%= dose.ingredient.name %></li>
@@ -9,3 +13,4 @@
 
 <%= link_to "Add ingredients", new_cocktail_dose_path(@cocktail) %>
 <%= link_to "Back to cocktails list", cocktails_path %>
+<%= link_to 'Destroy', cocktail_path, class: "btn btn-primary", method: :delete, data: { confirm: 'Are you sure?' } %>
